--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1541,7 +1541,7 @@
 			display: inline-block;
 			width: 6em;
 			height: 2px;
-			background-color: #666666;
+			background-color: #fff;
 			margin-bottom: 4em;
 		}
 
