--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1530,7 +1530,8 @@
 	#footer {
 		text-align: center;
 		margin-top: 4em;
-		background-color: #fff;
+		background-color: #ffffff;
+		border: 1px solid;
 	}
 
 		#footer a {
@@ -1542,7 +1543,7 @@
 			display: inline-block;
 			width: 6em;
 			height: 2px;
-			background-color: #fff;
+			background-color: #ffffff;
 			margin-bottom: 4em;
 		}
 
