--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1530,8 +1530,6 @@
 	#footer {
 		text-align: center;
 		margin-top: 4em;
-		background-color: #ffffff;
-		border: 1px solid;
 	}
 
 		#footer a {
@@ -1543,12 +1541,13 @@
 			display: inline-block;
 			width: 6em;
 			height: 2px;
-			background-color: #ffffff;
+			background-color: #666666;
 			margin-bottom: 4em;
 		}
 
 		#footer .copyright {
 			font-size: 0.8em;
+			background-color: #ffffff;
 		}
 
 		@media screen and (max-width: 736px) {
@@ -1561,4 +1560,8 @@
 					margin-bottom: 2em;
 				}
 
+		}
+		footer {
+			background-color: #ffffff;
+			border: 1px solid;
 		}
