--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,8 +49,8 @@
 	}
 
 	#article_sect {
-		margin: 20px;
-		padding: 5px;
+		margin: 60px 40px 50px 40px;
+		font-weight: bold;
 	}
 
 /* Box Model */
